[package]
name = "keystone"
version = "0.1.0"
edition = "2021"
description = "Agent contract linter — safe edit zones, validation rules, ownership boundaries"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
